# librdkafka-utility

./: CMakeLists.txt  README.md  build.sh  main.cpp  setup.sh
conda/environments/: kafka_dev.yml
